objects/Car__c.object
<CustomObject>
    <fields>
        <fullName>AvengerSpeed__c</fullName>
        <formula>( MaxSpeed__c  +  MinSpeed__c ) / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AvengerSpeed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CarName__c</fullName>
        <label>CarName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Cars</relationshipLabel>
        <relationshipName>Cars</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DateCreate__c</fullName>
        <label>DateCreate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateDestroy__c</fullName>
        <label>DateDestroy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaxSpeed__c</fullName>
        <label>MaxSpeed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinSpeed__c</fullName>
        <label>MinSpeed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <label>Style</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Car</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>